nextcloud/depoly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nextcloud
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nextcloud
  template:
    metadata:
      labels:
        run: nextcloud
    spec: 
      containers:
      - image: nextcloud:14.0.4
        name: nextcloud
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-storage
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-storage
        persistentVolumeClaim:
          claimName: nextcloud-storage-claim
