nextcloud/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
spec:
  ports:
    - protocol: TCP
      name: front
      port: 80
      targetPort: 80
  selector:
    run: nextcloud
  type: NodePort
